The os_resource::get_page_size() & test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 
 add_executable(memaw_tests
   concepts_tests.cpp
+  resource_tests.cpp
 )
 target_link_libraries(memaw_tests PRIVATE memaw gtest_main)
 
