The nupp submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(memaw INTERFACE)
 target_compile_features(memaw INTERFACE cxx_std_20)
 target_include_directories(memaw INTERFACE $<BUILD_INTERFACE:${INCLUDE_DIR}>)
+target_link_libraries(memaw INTERFACE nupp)
+
+add_subdirectory(extern)
 
 if(MEMAW_BUILD_TESTS)
   enable_testing()
-  add_subdirectory(extern)
   add_subdirectory(test)
 endif()
