--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
 
-option(BUILD_GMOCK "" OFF)
-option(INSTALL_GTEST "" OFF)
-add_subdirectory(googletest)
+add_subdirectory(nupp)
+
+if(MEMAW_BUILD_TESTS)
+  option(BUILD_GMOCK "" OFF)
+  option(INSTALL_GTEST "" OFF)
+  add_subdirectory(googletest)
+endif()
