Windows Clang build

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,8 +7,9 @@ add_executable(memaw_tests
 target_link_libraries(memaw_tests PRIVATE memaw gmock gtest_main)
 
 # Show all warnings because we're pedantic (and also all and extra)
+# Also enable exceptions explicitly on MSVC-like compilers on Windows
 target_compile_options(memaw_tests PRIVATE
-  $<IF:$<BOOL:${MSVC}>, /W3, -Wall -Wpedantic -Wextra>)
+  $<IF:$<BOOL:${MSVC}>, /W3 /EHsc, -Wall -Wpedantic -Wextra>)
 
 include(GoogleTest)
 gtest_discover_tests(memaw_tests)
