--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,13 +12,12 @@ jobs:
             compiler: msvc-latest
           - os: windows-latest
             compiler: gcc-13
-        #Let's wait until libc++ implements std::atomic_ref
-        #include:
-        #  - os: macos-latest
-        #    compiler: clang-16
-        #  - os: ubuntu-latest
-        #    compiler: clang-16
-        #    stdlib: libc++
+        include:
+          - os: macos-latest
+            compiler: clang-16
+          - os: ubuntu-latest
+            compiler: clang-16
+            stdlib: libc++
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -38,7 +37,8 @@ jobs:
           CC: ${{ matrix.os == 'macos-latest' && 'clang' || matrix.compiler }}
           CXX: ${{ matrix.compiler == 'gcc-13' && 'g++-13' || matrix.os == 'macos-latest' && 'clang++' || 'clang++-16' }}
           toolset: ${{ matrix.os == 'windows-latest' && matrix.compiler == 'clang-16' && 'ClangCL' || null }}
-        run: cmake . -Bbuild -DMEMAW_BUILD_TESTS=ON ${{ env.toolset && format('-T {0}', env.toolset) }} ${{ env.compiler != 'msvc-latest' && '-DCMAKE_CXX_FLAGS=-mcx16' }} #${{ matrix.stdlib && format('-DCMAKE_CXX_FLAGS=-stdlib={0}', matrix.stdlib) }}
+          flags: ${{ matrix.compiler != 'msvc-latest' && '-mcx16' || null }}${{ matrix.stdlib && format(' -stdlib={0}', matrix.stdlib) }}
+        run: cmake . -Bbuild -DMEMAW_BUILD_TESTS=ON ${{ env.toolset && format('-T {0}', env.toolset) }} ${{ env.flags && format('-DCMAKE_CXX_FLAGS="{0}"', env.flags) }}
       - name: build
         run: cmake --build build
       - name: test
