--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.23)
 
 add_executable(memaw_tests
+  chain_resource_tests.cpp
   concepts_tests.cpp
   os_resource_tests.cpp
   pages_resource_tests.cpp
